force-app/main/default/objects/Form_1__c/fields/Amended_New_Form_1_ID__c.field-meta.xml
<CustomField>
    <fullName>Amended_New_Form_1_ID__c</fullName>
    <description>This will hold the new form id that was a result of the cloned form 1 with a status of Canceled Due to Amendment</description>
    <label>Amended New Form 1 Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>