force-app/main/default/objects/Form_1__c/fields/Analyst_Email__c.field-meta.xml
<CustomField>
    <fullName>Analyst_Email__c</fullName>
    <description>Analyst&#39;s email for receving 700 filer decision</description>
    <label>Inquired By</label>
    <type>Email</type>
</CustomField>