force-app/main/default/objects/Form_1__c/fields/Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Approval_Date__c</fullName>
    <description>Updated by Form 1 approval process to store approval date</description>
    <label>Approval Date</label>
    <type>Date</type>
</CustomField>