force-app/main/default/objects/Form_1__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Assign, reassign, submit...</description>
    <label>Assigned To</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>HR Division User, HR Personnel Analyst User, HR Personnel Specialist User</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Form_1s</relationshipName>
    <type>Lookup</type>
</CustomField>