force-app/main/default/objects/Form_1__c/fields/Canceled_Old_Form1_Name__c.field-meta.xml
<CustomField>
    <fullName>Canceled_Old_Form1_Name__c</fullName>
    <label>Canceled Old Form1 Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>