force-app/main/default/objects/Form_1__c/fields/Complete__c.field-meta.xml
<CustomField>
    <fullName>Complete__c</fullName>
    <formula>ISPICKVAL ( Recruitment_Status__c, &quot;Candidate Accepted&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Complete</label>
    <type>Checkbox</type>
</CustomField>