force-app/main/default/objects/Form_1__c/fields/Date_received_by_Personnel_Analyst__c.field-meta.xml
<CustomField>
    <fullName>Date_received_by_Personnel_Analyst__c</fullName>
    <label>Date Received by Personnel Analyst</label>
    <type>Date</type>
</CustomField>