force-app/main/default/objects/Form_1__c/fields/Date_to_Certifications__c.field-meta.xml
<CustomField>
    <fullName>Date_to_Certifications__c</fullName>
    <inlineHelpText>Approved by Personnel</inlineHelpText>
    <label>Date to Certifications</label>
    <type>Date</type>
</CustomField>