force-app/main/default/objects/Form_1__c/fields/Duty_statement__c.field-meta.xml
<CustomField>
    <fullName>Duty_statement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Required attachment checklist</description>
    <label>Duty statement</label>
    <type>Checkbox</type>
</CustomField>