force-app/main/default/objects/Form_1__c/fields/F1_Status_Hire_Type__c.field-meta.xml
<CustomField>
    <fullName>F1_Status_Hire_Type__c</fullName>
    <description>To copy the hire type from the F1 Status for reporting purpose</description>
    <label>F1 Status Hire Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>