force-app/main/default/objects/Form_1__c/fields/F1_Status_Notes__c.field-meta.xml
<CustomField>
    <fullName>F1_Status_Notes__c</fullName>
    <label>F1 Status Notes</label>
    <type>TextArea</type>
</CustomField>