force-app/main/default/objects/Form_1__c/fields/Fill_Type__c.field-meta.xml
<CustomField>
    <fullName>Fill_Type__c</fullName>
    <label>Fill Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Permanent</fullName>
            </value>
            <value>
                <fullName>Limited Term</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>