force-app/main/default/objects/Form_1__c/fields/Final_Filing_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Filing_Date__c</fullName>
    <description>from Cert Status</description>
    <label>Final Filing Date</label>
    <type>Date</type>
</CustomField>