force-app/main/default/objects/Form_1__c/fields/Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Year__c</fullName>
    <formula>IF(TEXT(MONTH(DATEVALUE(CreatedDate))) = &quot;1&quot;, TEXT(YEAR(DATEVALUE(CreatedDate)-365)),

IF(TEXT(MONTH(DATEVALUE(CreatedDate))) = &quot;2&quot;, TEXT(YEAR(DATEVALUE(CreatedDate)-365)),

IF(TEXT(MONTH(DATEVALUE(CreatedDate))) = &quot;3&quot;, TEXT(YEAR(DATEVALUE(CreatedDate)-365)),

IF(TEXT(MONTH(DATEVALUE(CreatedDate))) = &quot;4&quot;, TEXT(YEAR(DATEVALUE(CreatedDate)-365)),

IF(TEXT(MONTH(DATEVALUE(CreatedDate))) = &quot;5&quot;, TEXT(YEAR(DATEVALUE(CreatedDate)-365)),

IF(TEXT(MONTH(DATEVALUE(CreatedDate))) = &quot;6&quot;, TEXT(YEAR(DATEVALUE(CreatedDate)-365)),

TEXT(YEAR(DATEVALUE(CreatedDate)) 
)))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fiscal Year</label>
    <type>Text</type>
</CustomField>