force-app/main/default/objects/Form_1__c/fields/Form_1_Age__c.field-meta.xml
<CustomField>
    <fullName>Form_1_Age__c</fullName>
    <formula>TEXT (General_Recruitment_Status_Date__c -  Requested_Effective_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Form 1 Age</label>
    <type>Text</type>
</CustomField>