force-app/main/default/objects/Form_1__c/fields/Form_1_Cert_Status__c.field-meta.xml
<CustomField>
    <fullName>Form_1_Cert_Status__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Form 1 Cert Status</label>
    <referenceTo>Form_1_Cert_Status__c</referenceTo>
    <relationshipLabel>Form 1s</relationshipLabel>
    <relationshipName>Form_1s</relationshipName>
    <type>Lookup</type>
</CustomField>