force-app/main/default/objects/Form_1__c/fields/Form_1_Unique_Number__c.field-meta.xml
<CustomField>
    <fullName>Form_1_Unique_Number__c</fullName>
    <description>This field is updated by the combination of Form 1 auto-number, formula to have desired format</description>
    <label>Form 1 Unique Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>