force-app/main/default/objects/Form_1__c/fields/Info_Hold_Status__c.field-meta.xml
<CustomField>
    <fullName>Info_Hold_Status__c</fullName>
    <description>Store status of  F1-Status of type Info Hold</description>
    <label>Hold Status</label>
    <length>200</length>
    <type>Text</type>
</CustomField>