force-app/main/default/objects/Form_1__c/fields/Interview_Conducted__c.field-meta.xml
<CustomField>
    <fullName>Interview_Conducted__c</fullName>
    <description>Latest Status</description>
    <label>Interviews - Conducted</label>
    <summarizedField>Form_1_Status__c.Date_of_Status__c</summarizedField>
    <summaryFilterItems>
        <field>Form_1_Status__c.Form1_Status_Type__c</field>
        <operation>equals</operation>
        <value>Interviews - Conducted</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Form_1_Status__c.Error_or_Invalid__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Form_1_Status__c.Form_1__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>