force-app/main/default/objects/Form_1__c/fields/Interview_Panel_Member_List__c.field-meta.xml
<CustomField>
    <fullName>Interview_Panel_Member_List__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Required attachment checklist</description>
    <label>Interview Panel</label>
    <type>Checkbox</type>
</CustomField>