force-app/main/default/objects/Form_1__c/fields/Interview_Questions__c.field-meta.xml
<CustomField>
    <fullName>Interview_Questions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Required attachment checklist</description>
    <label>Interview Questions</label>
    <type>Checkbox</type>
</CustomField>