force-app/main/default/objects/Form_1__c/fields/Job_Bulletin__c.field-meta.xml
<CustomField>
    <fullName>Job_Bulletin__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Required attachment checklist</description>
    <label>Job Bulletin</label>
    <type>Checkbox</type>
</CustomField>