force-app/main/default/objects/Form_1__c/fields/Justification__c.field-meta.xml
<CustomField>
    <fullName>Justification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Required attachment checklist</description>
    <label>Justification</label>
    <type>Checkbox</type>
</CustomField>