force-app/main/default/objects/Form_1__c/fields/KSA__c.field-meta.xml
<CustomField>
    <fullName>KSA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Required attachment checklist</description>
    <label>Knowledge, Skills, Abilities</label>
    <type>Checkbox</type>
</CustomField>