force-app/main/default/objects/Form_1__c/fields/Latest_Recruitment_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_Recruitment_Status_Date__c</fullName>
    <description>Latest Recruitment Status Date</description>
    <label>Tracked Recruitment Status Date</label>
    <type>Date</type>
</CustomField>