force-app/main/default/objects/Form_1__c/fields/Limited_Term_Months__c.field-meta.xml
<CustomField>
    <fullName>Limited_Term_Months__c</fullName>
    <label>Limited Term Months</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>