force-app/main/default/objects/Form_1__c/fields/Max_F1_Status_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Max_F1_Status_Created_Date__c</fullName>
    <description>Record last created F1 Status date for report</description>
    <label>Max F1 Status Created Date</label>
    <summarizedField>Form_1_Status__c.CreatedDate</summarizedField>
    <summaryForeignKey>Form_1_Status__c.Form_1__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>