force-app/main/default/objects/Form_1__c/fields/Max_On_Hold_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>Max_On_Hold_Status_Date__c</fullName>
    <description>Max On Hold Status Date (sub status and date) for report</description>
    <label>Hold Status Date</label>
    <summarizedField>Form_1_Status__c.Date_of_Status__c</summarizedField>
    <summaryFilterItems>
        <field>Form_1_Status__c.Form1_Status_Type__c</field>
        <operation>contains</operation>
        <value>Hold</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Form_1_Status__c.Error_or_Invalid__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Form_1_Status__c.Form_1__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>