force-app/main/default/objects/Form_1__c/fields/Org_chart__c.field-meta.xml
<CustomField>
    <fullName>Org_chart__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Required attachment checklist</description>
    <label>Org chart</label>
    <type>Checkbox</type>
</CustomField>