force-app/main/default/objects/Form_1__c/fields/Packet_to_HR_Part_2_Under_Review__c.field-meta.xml
<CustomField>
    <fullName>Packet_to_HR_Part_2_Under_Review__c</fullName>
    <label>Packet to HR - Part 2 Under Review</label>
    <summarizedField>Form_1_Status__c.Date_of_Status__c</summarizedField>
    <summaryFilterItems>
        <field>Form_1_Status__c.Error_or_Invalid__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Form_1_Status__c.Form1_Status_Type__c</field>
        <operation>equals</operation>
        <value>Packet to HR - Part 2 Under Review</value>
    </summaryFilterItems>
    <summaryForeignKey>Form_1_Status__c.Form_1__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>