force-app/main/default/objects/Form_1__c/fields/Position_Reviewed_for_700_Filing_Status__c.field-meta.xml
<CustomField>
    <fullName>Position_Reviewed_for_700_Filing_Status__c</fullName>
    <formula>IF( ISBLANK(SEC2_Position_Number__c), SEC1_Position_Number__c, SEC2_Position_Number__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Position Reviewed for 700 Filing Status:</label>
    <type>Text</type>
</CustomField>