force-app/main/default/objects/Form_1__c/fields/Position_Type__c.field-meta.xml
<CustomField>
    <fullName>Position_Type__c</fullName>
    <label>Position Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Backfill</fullName>
            </value>
            <value>
                <fullName>Promote in place</fullName>
            </value>
            <value>
                <fullName>Transfer</fullName>
            </value>
            <value>
                <fullName>Move</fullName>
            </value>
            <value>
                <fullName>Reclassification</fullName>
            </value>
            <value>
                <fullName>New Position</fullName>
            </value>
            <value>
                <fullName>Training and Development</fullName>
            </value>
            <value>
                <fullName>Temporary Authorized</fullName>
            </value>
            <value>
                <fullName>Temporary Help</fullName>
            </value>
            <value>
                <fullName>Legacy</fullName>
            </value>
            <value>
                <fullName>Reclassify within Division</fullName>
                <isActive>false</isActive>
                <label>Reclassify within Division</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>